2001-07-16  Andreas Schwab  <schwab@suse.de>

	* Makefile (before-compile): Don't add $(objpfx)crti.o.
	(omit-deps): Add crti.
	($(objpfx)libpthread.so): Depend on $(objpfx)crti.o, but make sure
	it is filtered out of the link command.

2001-07-16  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c (pthread_initialize): For FLOATING_STACKS don't bother
	to find the right value for __pthread_initial_thread_bos, it's not
	used.  If not FLOATING_STACKS first run
	__pthread_init_max_stacksize.

2001-06-16  H.J. Lu  <hjl@gnu.org>

	* internals.h: Include <stackinfo.h>.

	* attr.c: Don't include <stackinfo.h> here.
	* cancel.c: Likewise.
	* manager.c: Likewise.
	* pthread.c: Likewise.
	* ptlongjmp.c: Likewise.

2001-03-23  Matthew Wilcox  <willy@ldl.fc.hp.com>

	* attr.c: Make _STACK_GROWS_UP work.
	* internals.h: Likewise.
	* manager.c: Likewise.
	* pthread.c: Likewise.

2001-06-15  H.J. Lu  <hjl@gnu.org>

	* pthread.c (__pthread_reset_main_thread): Fix a typo.

2001-02-02  John S. Marvin  <jsm@udlkern.fc.hp.com>

	* semaphore.h: Use struct _pthread_fastlock as an element of
	sem_t instead of an identical struct.
	* rwlock.c: Remove casts.
	* semaphore.c: Likewise.

2001-04-30  Alan Modra  <amodra@one.net.au>

	* sysdeps/unix/sysv/linux/hppa/pt-initfini.c: New.

2001-05-25  Bruce Mitchener  <bruce@cubik.org>

	* linuxthreads.texi: Spelling corrections.

2001-05-25  Ulrich Drepper  <drepper@redhat.com>

	* oldsemaphore.c (__old_sem_wait): Clear p_nextwaiting before
	returning successfully.
	Patch by Gene Cooperman <gene@ccs.neu.edu>.

2001-05-24  Ulrich Drepper  <drepper@redhat.com>

	* spinlock.c (__pthread_lock) [HAS_COMPARE_AND_SWAP]: Before doing any
	serious work try once whether the lock is uncontested.
	Remove duplicate reading of __status before loop.
	Change suggested by Hans Boehm <hans_boehm@hp.com>.

	* spinlock.h (__pthread_trylock): Remove need for oldstatus variable.
	(__pthread_alt_trylock): Likewise.

2001-05-01  Kaz Kylheku  <kaz@ashi.footprints.net>
